Fixed console warnings and minor css bug on firefox quantum.

--- a/src/Game.css
+++ b/src/Game.css
@@ -37,6 +37,7 @@ ol, ul {
   margin-right: 10px;
   margin-top: 10px;
   padding: 0;
+  color:#333;
   text-align: center;
   width: 90px;
   border-radius: 5px;
